Fix window borders getting linewrapped

--- a/src/style.css
+++ b/src/style.css
@@ -309,6 +309,7 @@ iframe {
     width: 100%;
     height: var(--char-height);
     bottom: 0;
+    white-space: nowrap;
 }
 
 .windowHandle {
